fix responsive menu overflow

--- a/www/css/menu.css
+++ b/www/css/menu.css
@@ -9,17 +9,13 @@
     font-weight: 700;
 }
 
-.menuContainer {
-    position: fixed;
-    width: 100%;
-    height: 73px;
-    background-color: #FFF;
-    z-index: 100;
-}
-
 .mainMenuContainer {
     padding: 8px 0px;
-    height: 54px
+    height: 54px;
+    position: fixed;
+    width: 100%;
+    background-color: #FFF;
+    z-index: 100;
 }
 
 .mainMenuContainer a:hover {
@@ -109,4 +105,6 @@
 
 .menuLogoContainer {
     padding-left: 8px;
+    position: absolute;
+    z-index: 10;
 }
